--- a/src/components/Tool/style.scss
+++ b/src/components/Tool/style.scss
@@ -8,10 +8,18 @@
     cursor: pointer;
     position: relative;
     margin-bottom: 10px;
+    -webkit-transition: 2s ease-out;
+    -moz-transition: 2s ease-out;
+    -o-transition: 2s ease-out;
+    transition: 2s ease-out;
 
     &:hover {
       border: 1px solid #3AF0AE;
       box-shadow: 0px 0px 4px rgba(58, 240, 174, 0.6);
+      -webkit-transition: 2s ease-out;
+      -moz-transition: 2s ease-out;
+      -o-transition: 2s ease-out;
+      transition: 2s ease-out;
     }
 
     .icon {
